--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,7 +74,7 @@ body {
 	vertical-align: top; 
 	display: inline-block;
 	*display: inline;
-	margin: 10px auto;
+	margin: 25px auto;
 	position:relative;
 }
 .belement p{
